fix: resize splitter on firefox.

--- a/src/app/project/components/project-explorer/project-explorer.component.scss
+++ b/src/app/project/components/project-explorer/project-explorer.component.scss
@@ -1,4 +1,4 @@
-:host {
+.container {
 	position: relative;
 }
 
@@ -8,6 +8,7 @@
 	display: flex;
 	flex-direction: column;
 	border-right: solid 1px var(--border-low-color);
+	position: relative;
 
 	.action-button {
 		border: none;
